fixed alignment issue with ed subheader

--- a/styles/_education.scss
+++ b/styles/_education.scss
@@ -1,3 +1,7 @@
+.ed-title {
+  margin-left: 15px;
+}
+
 // FOR UDEMY COURSES
 
 .course-category {
